--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -1,12 +1,19 @@
 <div class = "container">
   <h1><%= session[:username] %>'s Repos</h1>
-  <% @repos_array.each do |repo| %>
-    <%= repo["name"] %><br>
-  <% end %>
+
+  <!-- List repositories here! -->
 
   <%= form_tag("/repositories/create", method: "post") do %>
     <%= label_tag(:name, "Create a New Repo:") %>
     <%= text_field_tag(:name, nil, id: "new-repo") %>
     <%= submit_tag("Create") %>
   <% end %>
+
+  <div class="repos">
+    <% @repos.each do |repo| %>
+    <div class="repo">
+      <h4><%= link_to repo["name"], repo["html_url"]%></h4>
+    </div>
+    <% end %>
+  </div>
 </div>
